[package]
name = "dht2"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
blake3 = "1.8.2"
futures-buffered = "0.2.12"
hex = "0.4.3"
indexmap = "2.10.0"
iroh = "0.91.1"
iroh-base = "0.91.1"
irpc = "0.7.0"
irpc-iroh = "0.7.0"
n0-future = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
tokio = "1.47.1"
tracing = "0.1.41"
