[package]
name = "dht2"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["dht", "content-discovery", "blake3"]

[dependencies]
arrayvec = "0.7.6"
blake3 = "1.8.2"
futures-buffered = "0.2.12"
hex = "0.4.3"
indexmap = "2.10.0"
iroh = "0.91.1"
iroh-base = "0.91.1"
irpc = "0.7.0"
irpc-iroh = "0.7.0"
n0-future = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
snafu = "0.8.6"
textplots = "0.8.7"
tokio = "1.47.1"
tracing = "0.1.41"
iroh-connection-pool = { git = "https://github.com/n0-computer/iroh-experiments", branch = "handler-pool" }

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", branch = "connection-speed-test" }

[dev-dependencies]
criterion = "0.7.0"
gif = "0.13.3"
testresult = "0.4.1"
tracing-subscriber = "0.3.19"

[[bench]]
name = "find_node"
harness = false